--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
@@ -19,6 +20,7 @@
     "eslint": "^6.6.0",
     "polished": "^3.6.3",
     "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
