--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -17,6 +17,7 @@
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "eslint": "^6.6.0",
     "polished": "^3.6.3",
     "react": "^16.13.1",
