--- a/06-gobarber-web/package.json
+++ b/06-gobarber-web/package.json
@@ -32,6 +32,14 @@
     "uuidv4": "^6.0.9",
     "yup": "^0.28.5"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/hooks/*.tsx",
+      "!src/hooks/index.tsx"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
